# AllocX

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/: CMakeLists.txt
include/allocx/: allocx.h  allocx_alignment.h  allocx_assertions.h  allocx_atomic.h  allocx_bitwise.h  allocx_core_types.h  allocx_debug.h  allocx_errors.h  allocx_utilities.h  memory_buffer.h  memory_pool.h
src/: allocx.cpp  memory_buffer.cpp  memory_pool.c
